doctor  route create succesfully

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-DB__URL = mongodb+srv://nitish:nitish052002@doctors.7goqlbl.mongodb.net/doctors?retryWrites=true&w=majority
+DB_URL = mongodb+srv://nitish:nitish052002@doctors.7goqlbl.mongodb.net/doctors?retryWrites=true&w=majority
